

Version history:
================


---
v.1.2 - 30/07/2018
 * Adding a new big feature: "convert big PNG files to JPG format" (WIP)
 * Adding a new option to set background color while doing any PNG operations
   that remove transparency (convert big and reduce colors).
 * Adding an option to set background color in hexadecimal mode (like in HTML).
 * Changed the transparency removal algorithm to something better.
 * Created some global constants for iOS console and thread settings.
 * Created a global constant for JPEG quality and raised the default to 80.
 * Adjustments in the downsizing code to better produce the expected behavior.
 * Refactored module into a full package and created the `setup.py` file.
 * Added Portuguese version of the documentation.
 * Other minor changes.

---
v.1.1.1 - 24/06/2018
 * Bug fix in single image optimization.

---
v.1.1 - 24/06/2018
 * Added new options to allow downsizing of images to a maximum width and/or
   height before applying any other optimization (guess what? It really makes
   a huge difference in file sizes…).
 * Added a new option to keep EXIF data in JPEG images (by default, it will
   be discarded).
 * Added a new CLI argument to display current version.
 * Added a new CLI argument to display a list of the currently supported image
   formats.
 * Added some bigger JPEG photos with EXIF to text-images.zip.

---
v.1.0 - 20/06/2018 (First public release)
 * No special dependencies, besides PIL/Pillow (this enables full compatibility
   with iPhones and iPads running Pythonista 3)
 * Basic CLI argument parsing, with separate groups of arguments for JPEG and
   PNG images.
 * Multiprocessing support on multicore and multiprocessor computers for really
   fast operation.
 * Multithreading support on Pythonista/iOS, for slightly improved performance
   (too bad, multiprocessing is currently not supported on that environment).
 * Supports optimization of both folders and individual files.